--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -18,6 +18,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:hint="이메일을 입력해주세요"
+        android:textSize="15sp"
         android:background="@drawable/edittext_bg"
         app:met_baseColor="#000000"
         app:met_primaryColor="#0072ff"
@@ -27,6 +28,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:hint="비밀번호를 입력해주세요"
+        android:textSize="15sp"
         android:background="@drawable/edittext_bg"
         app:met_baseColor="#000000"
         app:met_primaryColor="#0056d3"
@@ -37,6 +39,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:hint="닉네임을 입력해주세요"
+        android:textSize="15sp"
         android:background="@drawable/edittext_bg"
         app:met_baseColor="#000000"
         app:met_primaryColor="#0072ff"
@@ -45,6 +48,7 @@
         android:id="@+id/userAddress"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:textSize="15sp"
         android:hint="거주지역을 입력해주세요" />
     <LinearLayout
         android:layout_width="wrap_content"
@@ -68,6 +72,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:hint="거주인원을 입력해주세요"
+        android:textSize="15sp"
         app:met_baseColor="#000000"
         app:met_primaryColor="#0072ff"
         app:met_textColorHint="#d8d8d8"/>
