--- a/app/src/main/res/layout/activity_parsing_json.xml
+++ b/app/src/main/res/layout/activity_parsing_json.xml
@@ -25,5 +25,9 @@
             android:textSize="20sp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
+        <ListView
+            android:id="@+id/lv"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"></ListView>
     </LinearLayout>
 </LinearLayout>
