--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -13,37 +13,72 @@
         android:text="회원정보등록"
         android:textColor="#00c0ff"
         android:textSize="40sp"/>
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/userEmail"
+    <LinearLayout
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:hint="이메일을 입력해주세요"
-        android:textSize="15sp"
-        android:background="@drawable/edittext_bg"
-        app:met_baseColor="#000000"
-        app:met_primaryColor="#0072ff"
-        app:met_textColorHint="#d8d8d8"/>
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/userPwd"
+        android:orientation="vertical">
+        <android.support.design.widget.TextInputLayout
+            android:id="@+id/input_layout_email"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content">
+            <com.rengwuxian.materialedittext.MaterialEditText
+                android:id="@+id/userEmail"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:hint="이메일을 입력해주세요"
+                android:textSize="15sp"
+                android:inputType="textEmailAddress"
+                android:background="@drawable/edittext_bg"
+                android:singleLine="true"
+                android:nextFocusDown="@+id/textView2"
+                app:met_baseColor="#000000"
+                app:met_primaryColor="#0072ff"
+                app:met_textColorHint="#d8d8d8"/>
+        </android.support.design.widget.TextInputLayout>
+        <TextView
+            android:id="@+id/checkEmail"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:textColor="#ff0600"
+            android:textSize="16sp"
+            android:text="중복확인" />
+    </LinearLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_pwd"
         android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:hint="비밀번호를 입력해주세요"
-        android:textSize="15sp"
-        android:background="@drawable/edittext_bg"
-        app:met_baseColor="#000000"
-        app:met_primaryColor="#0056d3"
-        app:met_textColorHint="#d8d8d8"
-        android:password="true"/>
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/userNickName"
+        android:layout_height="wrap_content">
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/userPwd"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:hint="비밀번호를 입력해주세요"
+            android:textSize="15sp"
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:nextFocusDown="@+id/textView2"
+            app:met_baseColor="#000000"
+            app:met_primaryColor="#0056d3"
+            app:met_textColorHint="#d8d8d8"
+            android:password="true"/>
+    </android.support.design.widget.TextInputLayout>
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_nName"
         android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:hint="닉네임을 입력해주세요"
-        android:textSize="15sp"
-        android:background="@drawable/edittext_bg"
-        app:met_baseColor="#000000"
-        app:met_primaryColor="#0072ff"
-        app:met_textColorHint="#d8d8d8"/>
+        android:layout_height="wrap_content">
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/userNickName"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:hint="닉네임을 입력해주세요"
+            android:textSize="15sp"
+            android:background="@drawable/edittext_bg"
+            android:singleLine="true"
+            android:nextFocusDown="@+id/textView2"
+            app:met_baseColor="#000000"
+            app:met_primaryColor="#0072ff"
+            app:met_textColorHint="#d8d8d8"/>
+    </android.support.design.widget.TextInputLayout>
     <TextView
         android:id="@+id/userAddress"
         android:layout_width="180dp"
@@ -67,15 +102,20 @@
             android:text="강동구"
             android:onClick="choiceDistrict"/>
     </LinearLayout>
-    <com.rengwuxian.materialedittext.MaterialEditText
-        android:id="@+id/userFamilyMember"
+    <android.support.design.widget.TextInputLayout
+        android:id="@+id/input_layout_fNum"
         android:layout_width="180dp"
-        android:layout_height="wrap_content"
-        android:hint="거주인원을 입력해주세요"
-        android:textSize="15sp"
-        app:met_baseColor="#000000"
-        app:met_primaryColor="#0072ff"
-        app:met_textColorHint="#d8d8d8"/>
+        android:layout_height="wrap_content">
+        <com.rengwuxian.materialedittext.MaterialEditText
+            android:id="@+id/userFamilyMember"
+            android:layout_width="180dp"
+            android:layout_height="wrap_content"
+            android:hint="거주인원을 입력해주세요"
+            android:textSize="15sp"
+            app:met_baseColor="#000000"
+            app:met_primaryColor="#0072ff"
+            app:met_textColorHint="#d8d8d8"/>
+    </android.support.design.widget.TextInputLayout>
     <Button
         android:id="@+id/btnSignUp"
         android:layout_width="wrap_content"
