--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -19,6 +19,7 @@
         android:layout_height="wrap_content"
         android:hint="닉네임을 입력해주세요"
         android:textSize="15sp"
+        android:inputType="text"
         app:met_baseColor="#000000"
         app:met_primaryColor="#0072ff"
         app:met_errorColor="#ddaa00"
@@ -28,6 +29,7 @@
         android:layout_width="180dp"
         android:layout_height="wrap_content"
         android:hint="비밀번호를 입력해주세요"
+        android:inputType="textPassword"
         android:textSize="15sp"
         app:met_baseColor="#000000"
         app:met_primaryColor="#0056d3"
