--- a/app/src/main/res/layout/activity_water_volume_by_month.xml
+++ b/app/src/main/res/layout/activity_water_volume_by_month.xml
@@ -41,17 +41,17 @@
                     android:layout_width="match_parent"
                     android:layout_height="250dp"
                     android:layout_margin="10dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
-                    android:text="월 별 공용요금"
-                    android:textSize="20sp"/>
-                <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/chart2"
-                    android:layout_width="match_parent"
-                    android:layout_height="250dp"
-                    android:layout_margin="10dp"/>
+                <!--<TextView-->
+                    <!--android:layout_width="wrap_content"-->
+                    <!--android:layout_height="wrap_content"-->
+                    <!--android:layout_margin="10dp"-->
+                    <!--android:text="월 별 공용요금"-->
+                    <!--android:textSize="20sp"/>-->
+                <!--<com.github.mikephil.charting.charts.BarChart-->
+                    <!--android:id="@+id/chart2"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="250dp"-->
+                    <!--android:layout_margin="10dp"/>-->
             </LinearLayout>
         </ScrollView>
     </FrameLayout>
