--- a/app/src/main/res/layout/custom_dialog_view.xml
+++ b/app/src/main/res/layout/custom_dialog_view.xml
@@ -22,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:text="물 사용량(단위 m²)"
+        android:text="물 사용량(단위 m³)"
         android:textColor="#80000000"
         android:textSize="14sp" />
     <EditText
@@ -31,7 +31,6 @@
         android:layout_height="wrap_content"
         android:inputType="number"
         android:layout_marginTop="4dp"
-        android:text="0"
         android:textColor="#000000"
         android:textSize="14sp" />
     <TextView
@@ -44,8 +43,8 @@
         android:id="@+id/sPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:layout_marginTop="4dp"
-        android:text="0"
         android:textColor="#000000"
         android:textSize="14sp" />
     <TextView
@@ -58,8 +57,8 @@
         android:id="@+id/gPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:inputType="number"
         android:layout_marginTop="4dp"
-        android:text="0"
         android:textColor="#000000"
         android:textSize="14sp" />
 </LinearLayout>
