--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -174,8 +174,13 @@
                     android:text="월별 물 사용량"
                     android:textSize="20sp"
                     android:textStyle="bold"/>
-                <com.github.mikephil.charting.charts.BarChart
-                    android:id="@+id/chart"
+                <!--<com.github.mikephil.charting.charts.BarChart-->
+                    <!--android:id="@+id/chart"-->
+                    <!--android:layout_width="match_parent"-->
+                    <!--android:layout_height="200dp"-->
+                    <!--android:onClick="goToWVM"/>-->
+                <com.github.mikephil.charting.charts.LineChart
+                    android:id="@+id/chart1"
                     android:layout_width="match_parent"
                     android:layout_height="200dp"
                     android:onClick="goToWVM"/>
