--- a/app/src/main/res/layout/activity_water_volume_by_month.xml
+++ b/app/src/main/res/layout/activity_water_volume_by_month.xml
@@ -23,7 +23,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="월 별 물 사용량"
+                    android:text="물 사용량"
                     android:textSize="20sp"/>
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/chart"
@@ -34,7 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
-                    android:text="월 별 세대요금"
+                    android:text="세대요금"
                     android:textSize="20sp"/>
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/chart1"
