--- a/app/src/main/res/layout/edit_price_by_month.xml
+++ b/app/src/main/res/layout/edit_price_by_month.xml
@@ -8,11 +8,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
-        android:text="물 사용량(단위 m³)"
+        android:text="세대요금(단위:원)"
         android:textColor="#80000000"
         android:textSize="14sp" />
     <EditText
-        android:id="@+id/waterVolume"
+        android:id="@+id/sPrice"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:layout_marginTop="4dp"
+        android:textColor="#000000"
+        android:textSize="14sp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:text="공용요금(단위:원)"
+        android:textColor="#80000000"
+        android:textSize="14sp" />
+    <EditText
+        android:id="@+id/gPrice"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="number"
